@@ -1,8 +1,8 @@
-#appenders = console
-#appender.console.type = Console
-#appender.console.name = STDOUT
-#appender.console.layout.type = PatternLayout
-#appender.console.layout.pattern = %d{yyyy-MM-dd, HH:mm:ss} %C{6} - %M%n %-5p: %m%n
+appenders = console
+appender.console.type = Console
+appender.console.name = STDOUT
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = %d{yyyy-MM-dd, HH:mm:ss} %C{6} - %M%n %-5p: %m%n
 
 #appender.file.type = File
 #appender.file.name = ERRORLOG
@@ -11,7 +11,7 @@
 #appender.file.layout.pattern= %d{yyyy-MM-dd, HH:mm:ss} %C{6} - %M%n %-5p: %m%n
 
 rootLogger.level = error
-rootLogger.appenderRefs = stdout
+rootLogger.appenderRefs = console
 rootLogger.appenderRef.stdout.ref = STDOUT
 
 #loggers=console
